<resources>
    <string name="app_name">TakeYourSeat</string>
    <string name="username">Username</string>
    <string name="pass">Password</string>
    <string name="logIn">Log in</string>
    <string name="registerHere">Not a member? Sign up here!</string>
    <string name="confirm">Confirm password</string>
    <string name="name">First name</string>
    <string name="lastName">Last name</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="register">Sign up</string>
    <string name="back">Back</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="homePage">Home page</string>
    <string name="welcome">Welcome</string>
    <string name="detail">Restaurant details</string>
    <string name="contact">Contact</string>
    <string name="cancel">Cancel</string>
    <string name="menu">Menu</string>
    <string name="about">About</string>
    <string name="tables">Tables</string>
    <string name="location">Location</string>
    <string name="change">Change profile picture</string>
    <string name="reservation">Reservations</string>
    <string name="date">Date</string>
    <string name="startDate">Start date</string>
    <string name="endDate">End date</string>
    <string name="time">Time</string>
    <string name="invite">Invite friends</string>
    <string name="reserve">Reserve</string>
    <string name="finish">Finish reservation</string>
    <string name="chooseTable">Choose tables</string>
    <string name="datePicker">Date picker</string>
    <string name="timePicker">Time picker</string>
    <string name="myFriends">My friends</string>
    <string name="others">Others</string>
    <string name="addFriend">Add friend</string>
    <string name="editProfile">Edit profile</string>
    <string name="editPassword">Change password</string>
    <string name="changeNewPass">New password</string>
    <string name="repeatNewPass">Repeat new password</string>
    <string name="save">Save</string>
    <string name="profileDetails">Profile details</string>
    <string name="delete">Delete from friends list</string>
    <string name="addRes">Add restaurant</string>
    <string name="addCom">Add comment</string>
    <string name="leaveComment">Leave comment here</string>
    <string name="rate">Rating</string>
    <string name="errEmail">Invalid email</string>
    <string name="nav_home">Home</string>
    <string name="nav_restaurants">Restaurants</string>
    <string name="nav_profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="oops">Ooops</string>
    <string name="sure">Sure</string>
    <string name="no">No</string>
    <string name="next">Next</string>
    <string name="makeRes">Make reservation</string>
    <string name="startRes">Start reservation</string>
    <string name="res">Restaurant</string>
    <string name="resFriends">Invited friends</string>
    <string name="resDetail">Reservation details</string>
    <string name="viewRes">View detail</string>
    <string name="reservations">My reservations</string>
    <string name="delRes">Delete</string>
    <string name="delOk">Are you sure you want delete this item?</string>
    <string name="location_disabled_message">Your Locations seems to be disabled, do you want to enable it?</string>
    <string name="yes">Yes</string>
    <string name="showPass">SHOW PASSWORD</string>
    <string name="hidePass">HIDE PASSWORD</string>
    <string name="logOut">Log out</string>
    <string name="searchFriends">Search friends</string>
    <string name="searchRes">Search restaurants</string>
    <string-array name="nav_drawer_item_titles">
        <item>Home</item>
        <item>Reservations</item>
        <item>Profile</item>
        <item>Friends</item>
        <item>Close By Restaurants</item>
    </string-array>
    <string name="title_activity_nav_drawer">NavDrawerAct</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Distance</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_sync_title">Allow Sync</string>
    <string name="pref_sync_summ">Allow app to sync data automatically, when wifi is avalible</string>
    <string name="pref_sync">pref_sync</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_km">Select distance for restaurant search</string>
    <string-array name="pref_km_titles">
        <item>Under 1 km</item>
        <item>Under 2 km</item>
        <item>Under 5 km</item>
        <item>Under 10 km</item>
    </string-array>
    <string-array name="pref_km_values">
        <item>1</item>
        <item>2</item>
        <item>5</item>
        <item>10</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">Receive notification</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="aboutRes">We cordially invite you to our restaurant Platan. It combines tradition with modernity in an exceptional way. Its interior is unique because fragments of old walls have been preserved and they have been ingeniously blended with the modern decor.

We mainly serve traditional Polish cuisine and add variety to our menu according to the season. We can satisfy even the most sophisticated culinary expectations of our customers. We provide a professional service.</string>


</resources>
