<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="takeyourseat.activities.RegisterActivity">

        <EditText
            android:id="@+id/firstNameReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="17dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/lastNameReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/firstNameReg"
            android:layout_marginTop="17dp"
            android:ems="10"
            android:hint="@string/lastName"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/usernameReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/lastNameReg"
            android:layout_marginTop="17dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/passReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/usernameReg"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="17dp"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/pass"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/rePassReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passReg"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="17dp"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/confirm"
            android:inputType="textPassword" />


        <EditText
            android:id="@+id/emailReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:layout_below="@+id/rePassReg"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/addressReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/emailReg"
        android:layout_marginTop="17dp"
        android:hint="@string/address"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/signUp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/button"
        android:text="@string/register"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp" />


</RelativeLayout>
