<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fr1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="takeyourseat.fragments.DateAndTimeFragment">

    <EditText
        android:id="@+id/dateRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/date"
        android:inputType="textPersonName"
        android:backgroundTint="@color/primary"
        android:layout_marginTop="35dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/timeButton"
        android:layout_toStartOf="@+id/timeButton" />

    <EditText
        android:id="@+id/timeRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/time"
        android:inputType="textPersonName"
        android:backgroundTint="@color/primary"
        android:layout_below="@+id/dateButton"
        android:layout_marginTop="37dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/timeButton"
        android:layout_toStartOf="@+id/timeButton" />

    <Button
        android:id="@+id/dateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datePicker"
        android:textColor="@color/icons"
        android:background="@color/primary"
        android:layout_alignTop="@+id/dateRes"
        android:layout_toRightOf="@+id/dateRes"
        android:layout_toEndOf="@+id/dateRes" />

    <Button
        android:id="@+id/timeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/icons"
        android:background="@color/primary"
        android:text="@string/timePicker"
        android:layout_alignBottom="@+id/timeRes"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/next1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/icons"
        android:background="@color/primary"
        android:text="@string/next"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
