<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="takeyourseat.activities.ReservationActivity">


    <TextView
        android:id="@+id/reservation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/reservation"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/nameRes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:ems="10"
        android:hint="@string/name"
        android:layout_below="@+id/reservation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/lastNameRes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/lastName"
        android:layout_below="@+id/nameRes"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/dateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="datePicker"
        android:text="@string/date"
        android:layout_below="@+id/lastNameRes"
        android:layout_toRightOf="@+id/dateRes"
        android:layout_toEndOf="@+id/dateRes"
        android:layout_marginLeft="31dp"
        android:layout_marginStart="31dp" />


    <EditText
        android:id="@+id/dateRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/date"
        android:inputType="textPersonName"
        android:layout_alignBaseline="@+id/dateButton"
        android:layout_alignBottom="@+id/dateButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/reserve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/reserve"
        android:background="@color/button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_below="@+id/dateButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp" />



</RelativeLayout>
