<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="takeyourseat.fragments.AllReservationDetailsFragment">

    <TextView
        android:id="@+id/resName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/res"
        android:textAlignment="textEnd"
        android:textSize="25dp"
        android:layout_marginTop="130dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/resDateText"
        android:layout_alignRight="@+id/resDate"
        android:layout_alignEnd="@+id/resDate" />

    <TextView
        android:id="@+id/resNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="25dp"
        android:editable="false"
        android:layout_alignBaseline="@+id/resName"
        android:layout_alignBottom="@+id/resName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/resFriends"
        android:layout_toEndOf="@+id/resFriends" />

    <TextView
        android:id="@+id/resDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textAlignment="textEnd"
        android:textSize="25dp"
        android:layout_below="@+id/resName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/resNameText"
        android:layout_toStartOf="@+id/resNameText" />

    <TextView
        android:id="@+id/resDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="25dp"
        android:editable="false"
        android:layout_below="@+id/resNameText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/resDate"
        android:layout_toEndOf="@+id/resDate" />

    <TextView
        android:id="@+id/resTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textAlignment="textEnd"
        android:textSize="25dp"
        android:layout_below="@+id/resDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/resNameText" />

    <TextView
        android:id="@+id/resTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="25dp"
        android:editable="false"
        android:layout_alignBaseline="@+id/resTime"
        android:layout_alignBottom="@+id/resTime"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/resDate"
        android:layout_toEndOf="@+id/resDate" />

    <TextView
        android:id="@+id/resFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resFriends"
        android:textAlignment="center"
        android:textSize="25dp"
        android:layout_below="@+id/resTime"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp" />

    <EditText
        android:id="@+id/resFriendsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:editable="false"
        android:ems="10"
        android:inputType="textMultiLine"
        android:textSize="25dp"
        android:layout_below="@+id/resFriends"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="37dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resDetail"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp" />

    <Button
        android:id="@+id/reserve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/primary"
        android:text="@string/reserve"
        android:textColor="@color/icons"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
